--- a/laab/src/faqs.css
+++ b/laab/src/faqs.css
@@ -1,8 +1,8 @@
 .pinkBar-wrapper {
   position: absolute;
-  top: 3200px;
+  top: 3100px;
   width: 100vw;
-  height: 1580px;
+  height: 1880px;
   overflow-x: hidden;
   z-index: -1000;
   left: 0;
@@ -11,10 +11,10 @@
 .pinkBar {
 z-index: -1000;
   position: absolute;
-  top: -100px;
+  top: 0px;
   width: 2000px;
 height: 1580px;
-left: -250px;
+left: 0px;
 }
 
 
